--- a/ribbit/src/styles/tailwind.css
+++ b/ribbit/src/styles/tailwind.css
@@ -202,6 +202,17 @@
   * {
     @apply border-border outline-ring/50;
   }
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration: none;
+  }
+  button {
+    font-family: inherit;
+    font-size: inherit;
+  }
   html {
     @apply overscroll-y-none;
   }
